Employees CRUD + changes to dt processing

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,3 +18,6 @@
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/brands';
+
+// Select2
+@import "../../node_modules/select2/dist/css/select2.min.css";
