--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -4,3 +4,32 @@
     font-size: 80%;
     color: #dc3545;
 }
+
+// Customized select2
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    color: #444;
+    line-height: 1.6 !important;
+}
+
+.select2-container .select2-selection--single .select2-selection__rendered {
+    display: block;
+    padding-left: 0;
+    padding-right: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.select2-container--default .select2-selection--single {
+    background-color: #fff;
+    border-radius: 4px;
+}
+
+.select2-selection.select2-selection--single {
+    border: 1px solid #ced4da !important;
+    height: calc(1.6em + 0.75rem + 2px) !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    top: 60% !important;
+}
