--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -6,15 +6,27 @@
 }
 
 // Customized select2
+.select2 {
+    display: block !important;
+}
 .select2-container--default .select2-selection--single .select2-selection__rendered {
     color: #444;
     line-height: 1.6 !important;
 }
 
-.select2-container .select2-selection--single .select2-selection__rendered {
+.select2-container .select2-selection--single .select2-selection__rendered
+{
     display: block;
     padding-left: 0;
     padding-right: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.select2-container .select2-selection--multiple .select2-selection__rendered
+{
+    display: block;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -28,6 +40,15 @@
 .select2-selection.select2-selection--single {
     border: 1px solid #ced4da !important;
     height: calc(1.6em + 0.75rem + 2px) !important;
+}
+.select2-selection.select2-selection--multiple {
+    border: 1px solid #ced4da !important;
+    min-height: calc(2.25rem) !important;
+    padding: 1px 0 6px 0 !important;
+
+    .select2-selection__clear {
+        margin-right: 5px !important;
+    }
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
