--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,3 +21,6 @@
 
 // Select2
 @import "../../node_modules/select2/dist/css/select2.min.css";
+
+// flatpickr
+@import "~flatpickr/dist/flatpickr.min.css";
