Organize routes and redirection

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,3 +24,6 @@
 
 // flatpickr
 @import "~flatpickr/dist/flatpickr.min.css";
+
+// overlay scrollbars
+@import "~overlayscrollbars/css/OverlayScrollbars.min.css";
